tests/ui/associated-types/mismatch-two-relevant-impls.stderr
error[E0271]: type mismatch resolving `<W<i32> as Tr>::Assoc == ()`
  --> $DIR/mismatch-two-relevant-impls.rs:18:18
   |
LL |     needs_unit::<W<i32>>();
   |                  ^^^^^^ type mismatch resolving `<W<i32> as Tr>::Assoc == ()`
   |
note: expected this to be `()`
  --> $DIR/mismatch-two-relevant-impls.rs:8:18
   |
LL |     type Assoc = u32;
   |                  ^^^
note: required by a bound in `needs_unit`
  --> $DIR/mismatch-two-relevant-impls.rs:15:21
   |
LL | fn needs_unit<T: Tr<Assoc = ()>>() {}
   |                     ^^^^^^^^^^ required by this bound in `needs_unit`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
